# HelloKafka

./: README.md
KafkaCluster/: docker-compose.yml
KafkaMonitor/: docker-compose.yml
KafkaMonitor/grafana/: kafka-grafana-template.json
KafkaMonitor/jmxtrans/: kafka-broker.json  kafka-cluster-monitor-template.json  kafka-topic.json
RdKafka/CKafkaConsumer/: CKafkaConsumer.cpp  CKafkaConsumer.h  CMakeLists.txt  main.cpp
RdKafka/CKafkaProducer/: CKafkaProducer.cpp  CKafkaProducer.h  CMakeLists.txt  main.cpp
RdKafka/KafkaConsumer/: CMakeLists.txt  KafkaConsumer.cpp  KafkaConsumer.h  main.cpp
RdKafka/KafkaProducer/: CMakeLists.txt  KafkaProducer.cpp  KafkaProducer.h  main.cpp
confluent_kafka/: KafkaAvroConsumer.py  KafkaAvroProducer.py  KafkaConsumer.py  KafkaManager.py  KafkaProducer.py
